...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="z6w-74-5jE">
                                <rect key="frame" x="20.5" y="30" width="373" height="41.5"/>
                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <segments>
                                    <segment title="All Movies"/>
                                    <segment title="My Movies"/>
                                </segments>
                                <color key="tintColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <action selector="ChangeMovieSegment:" destination="BYZ-38-t0r" eventType="valueChanged" id="fxg-zT-iVr"/>
                                </connections>
                            </segmentedControl>
...
                            <constraint firstItem="pop-do-xEu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="RoQ-62-mTs"/>
                            <constraint firstItem="z6w-74-5jE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="TNt-mR-36h"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pop-do-xEu" secondAttribute="bottom" constant="30" id="y3W-yi-b5E"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Movies Time" id="QNd-UD-S70">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="sN1-7a-zda">
                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="AddMovie:" destination="BYZ-38-t0r" id="eUl-qy-xil"/>
                            </connections>
                        </barButtonItem>
...
