//
//  MoviesUITests.swift
//  MoviesUITests
//
//  Created by Shimaa Hassan on 2/24/19.
//  Copyright © 2019 Shimaa Hassan. All rights reserved.
//

import XCTest

class MoviesUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testSegmentsTapAndAddMovie() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        app/*@START_MENU_TOKEN@*/.buttons["All Movies"]/*[[".segmentedControls.buttons[\"All Movies\"]",".buttons[\"All Movies\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app/*@START_MENU_TOKEN@*/.buttons["My Movies"]/*[[".segmentedControls.buttons[\"My Movies\"]",".buttons[\"My Movies\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.navigationBars["Movies Time"].buttons["Add"].tap()
        app.textFields["Write title ..."].tap()
        app.textViews.staticTexts["Write overview ..."].tap()
        app.textViews.containing(.staticText, identifier:"Write overview ...").element.tap()
        
        let ddMmYyyTextField = app.textFields["DD/MM/YYY"]
        ddMmYyyTextField.tap()
        ddMmYyyTextField.tap()
        app.buttons["ADD"].tap()
        app.otherElements.containing(.navigationBar, identifier:"Movies Time").children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .table).element.tap()
        
    }

}
